
  * Apply patches from Andreas Henriksson (Closes: Bug#456918)
    - Fix aadr typo in IPv6 loopback method
    - Add dependency on new version of iproute that supports specifying
      netmasks as dotted-quads.
    - Re-add netmask field for backwards compatibility.
    - Flush addresses when taking down a static inet interface.
    - Switch inet/dhcp and inet6/static methods to iproute.
    - Update test cases. 

 -- Anthony Towns <ajt@debian.org>  Fri, 21 Dec 2007 22:01:09 +1000

ifupdown (0.7~alpha2) experimental; urgency=low

  * Add command line interface options (ifup -o foo=bar eth1). Yay!
  * Switch to using iproute instead of ifconfig/route. Thanks to Andrew
    Pollock.
  * Drop support for kernels prior to 2.1.100 (and that don't have NETLINK
    for iproute).
  * Drop support for specifying a "netmask" in static inet interfaces.
  * Bump DH_COMPAT to 4 (from 1!)

 -- Anthony Towns <aj@azure.humbug.org.au>  Mon, 18 Jun 2007 15:47:21 +0100

ifupdown (0.6.8) unstable; urgency=low

  * Add myself as co-maintainer with approval from Anthony Towns.
  * Change path of dhclient.leases to make sure the dhcp state survive
    reboots. (Closes: #311777)
  * Change leasehours option value to match the option name. 
  * Async ifup/ifdown modication based on patch from Scott James
    Remnant and Ubuntu.  (Closes: #347580)
    - Rewrite the way that ifup and ifdown read and write the state
      file.  Instead of storing it in memory and holding a lock on it
      (preventing concurrent processes from actually being concurrent)
      use atomic read and write functions that only hold the lock for
      very short periods.
    - Write to the state file when we start bringing up or tearing
      down the interface, so we don't ever try to do the same
      operation at the same time.
    - Update the state file once the operation is complete to ensure
      we record the actual status of it.
  * Acknowledge NMUs. (Closes: #311011, #311443, #353154, #339834, #311928,