@@ -23,11 +23,8 @@ and
 commands.
 This is where you configure how your system is connected to the network.
 .P
-Lines starting with `#' are ignored. Note that end-of-line comments are
-NOT supported, comments must be on a line of their own.
-.P
-A line may be extended across multiple lines by making the last character
-a backslash.
+Lines starting with `#' are ignored.
+A line may be extended across multiple lines by making the last character a backslash.
 .P
 The file consists of zero or more "iface", "mapping", "auto" and "allow-"
 stanzas. Here is an example.
@@ -64,7 +61,7 @@ brings the named interfaces up in the order listed.
 .P
 Lines beginning with "allow-" are used to identify interfaces that should
 be brought up automatically by various subsytems. This may be done using
-a command such as "ifup --allow=hotplug eth0 eth1", which will only bring
+a command such as "ifup \-\-allow=hotplug eth0 eth1", which will only bring
 up eth0 or eth1 if it is listed in an "allow-hotplug" line. Note that
 "allow-auto" and "auto" are synonyms.
 .P
@@ -215,7 +212,7 @@ as per MODE, but with finer granularity, distinguishing the
 \fIpre-up\fR, \fIpost-up\fR, \fIpre-down\fR and \fIpost-down\fR phases.
 .TP
 .B VERBOSITY
-indicates whether \fB--verbose\fR was used; set to 1 if so, 0 if not.
+indicates whether \fB\-\-verbose\fR was used; set to 1 if so, 0 if not.
 .TP
 .B PATH
 the command search path:
